# movierama

./: .gitignore  README.md  docker-compose.rust.yml  docker-compose.spring.yml  docker-compose.yml  load_test.js
backend-rust/movierama/: Cargo.toml
backend-rust/movierama/.sqlx/: query-007d309986513047e3a0493de74ad47d711d85d6ef6deae74a6e0a19aeda1403.json  query-abd2b2151edd79b3a5f628ed7afee898c87f8939c40a8ede30c84ea59da8836f.json  query-b90aba3156754f27bf288f50e3009030a4dbec382f6be8cdbc34a3e697d85ecc.json
backend-rust/movierama/scripts/: init_mock_data.sh
backend-rust/movierama/src/: main.rs  models.rs  routes.rs
backend-rust/movierama/src/handlers/: mod.rs
backend/movierama/: Cargo.toml  Dockerfile  build.gradle
backend/movierama/.sqlx/: query-376ab96ac8cd2a1156adeac33cdd6c98f496cc2151fb76cdb4b291588e9fd342.json  query-75cf8232b1a8ed7d269d0a87e1e1a599bb6d53e2c35c349747c210436171e0a0.json  query-7ae308b9f6bafb75f0d37f11650bee3d93f9877437140f86107ca1b4ff7428af.json  query-8e95bcbfdb4f274041dae94342c740e4849a913568b8d817be35d720febc975c.json  query-91304bbcd4ce6d5558369242b2600360efebd4ee99df8745cd34d9c31fe027ba.json  query-a2a5a7247a88646e568cf7c7bf4f1fef67ae33906313b281736e85127224fe86.json  query-b8ca07e92b50e382fb207a97d993c05d506535309caca313c5d59727fe25d161.json  query-caaa7a55b5f52bd31702715bbcbdfd8f7986b31c3657eb62410bc9ae0463a255.json  query-dec16d2d996c3eff2505d17269bf8a1f637ae22b8f7c1b568dd77daccf77541f.json
backend/movierama/migrations/: 20251027181646_create_schema.sql
backend/movierama/src/: auth.rs  exceptions.rs  main.rs  models.rs  pagination.rs  routes.rs
backend/movierama/src/handlers/: auth_handler.rs  mod.rs  movies_handler.rs  users_handler.rs  votes_handler.rs
backend/movierama/src/main/docker/: docker-compose.yml
backend/movierama/src/main/resources/: application.properties  application.yaml
backend/movierama/src/services/: auth_service.rs  mod.rs  movie_service.rs  user_service.rs  vote_service.rs
(+84 files in other folders)
