[package]
name = "movierama"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-extra = { version = "0.12.1", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
thiserror = "2.0.17"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
